# CppSite

./: .gitignore  CMakeLists.txt  README.md  db.cpp  docker-compose.yml  install.sh  main.cpp
apache/: apache2.conf  dockerfile  httpd.conf[main]  modsecurity.conf  my-httpd.conf[example]  security2.conf  vulnerable1.com.conf
backend/: .dockerignore  CMakeLists.txt  Dockerfile
backend/lib/: DatabaseAPI.cpp
backend/src/: main.cpp
frontend/html/: index.html  storage.html
frontend/static/: index.css  storage.css  storage.js
frontend/templates/: about.html  index.html
lib/: DatabaseAPI.h
nginx/: deny.rules  dockerfile  entrypoint.sh  index.conf  nginx.conf  nginx.conf[main]  vulnerable.com.conf
nginx/conf.d/: index.conf
templates/: index.html  login.html
tests/: apache_dos.py
